# openapi/p4pa-pagopa-payments.openapi.yaml
@@ -146,11 +146,6 @@ paths:
           schema:
             type: integer
             format: int64
-        - name: taxCode
-          in: query
-          required: true
-          schema:
-            type: string
         - name: iuv
           in: query
           required: true
